# lambars

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  SECURITY.md  TODO.md  cliff.toml  codecov.yml
benches/api/: Cargo.toml  README.md  TODO.md
benches/api/benchmarks/: .env.sample  README.md  check_thresholds.sh  compare_results.sh  nightly_config.yaml  run_benchmark.sh  setup_test_data.sh  setup_wrk2.sh  test_env_application.sh  test_lua_compatibility.sh  thresholds.yaml  validate_meta_schema.sh  validate_metrics_invariants.sh
benches/api/benchmarks/docs/: environment_setup.md  stats_format.md  tasks_bulk_scale.md
benches/api/benchmarks/profiling-results/: .gitignore  README.md
benches/api/benchmarks/scenarios/: burst_spike_test.yaml  cache_cold_test.yaml  cache_warm_test.yaml  chaos_test.yaml  error_resilience_test.yaml  in_memory_read_heavy_warm.yaml  large_scale_read.yaml  large_scale_seeded.yaml  matrix.yaml  mixed_contention.yaml  mixed_workload_burst.yaml  payload_variation_complex.yaml  payload_variation_heavy.yaml  payload_variation_minimal.yaml  payload_variation_standard.yaml  pool_stress_large.yaml  pool_stress_medium.yaml  pool_stress_small.yaml  postgres_redis_read_heavy_cold.yaml  postgres_redis_read_heavy_warm.yaml  postgres_write_heavy.yaml  production_load.yaml  profiling_baseline.yaml  projects_progress.yaml  ramp_up_down_test.yaml  rps_smoke_constant.yaml  rps_smoke_step_up.yaml  step_up_stress_test.yaml  tasks_bulk.yaml  tasks_eff.yaml  tasks_search.yaml  tasks_search_cold.yaml  tasks_search_hot.yaml  tasks_update.yaml  tasks_update_conflict.yaml  tasks_update_status.yaml  tasks_update_steady.yaml  write_contention_high.yaml
benches/api/benchmarks/schema/: meta_extended.schema.json  meta_v3.json
benches/api/benchmarks/scripts/: COVERAGE_CHECK_RESULTS.md  DESIGN.md  README.md  README_ERROR_RATE_IMPROVEMENTS.md  TASKS_UPDATE_FIX.md  TODO.md  alternative.lua  applicative.lua  async_pipeline.lua  bifunctor.lua  cache_metrics.lua  cache_stats.sh  calculate_stats.py  check_convergence.py  check_significance.py  common.lua  compare_commits.sh  contention.lua  error_tracker.lua  extract_hot_functions.sh  health.lua  load_profile.lua  load_shape_demo.lua  merge_lua_metrics.py  misc.lua  optics.lua  ordered.lua  parse_wrk_output.sh  payload_generator.lua  phase2_alternative.lua  phase2_applicative.lua  phase2_async_pipeline.lua  phase2_bifunctor.lua  phase2_misc.lua  phase2_optics.lua  phase2_ordered.lua  phase2_recursive.lua  phase2_traversable.lua  profile.sh  profile_wrk.lua  (+43 more)
benches/api/benchmarks/templates/: baseline.yaml  high_load.yaml
benches/api/docker/: Dockerfile  compose.ci.yaml  compose.yaml
benches/api/docker/postgres/: init.sql
benches/api/src/: lib.rs  main.rs
benches/api/src/api/: advanced.rs  alternative.rs  applicative.rs  async_pipeline.rs  bifunctor.rs  bulk.rs  cache_header.rs  consistency.rs  demo.rs  dto.rs  effects.rs  error.rs  handlers.rs  json_buffer.rs  misc.rs  mod.rs  optics_advanced.rs  ordered.rs  project.rs  query.rs  recursive.rs  string_buffer.rs  transaction.rs  traversable.rs  typeclass.rs  workflow_eff.rs
benches/api/src/domain/: history.rs  mod.rs  project.rs  task.rs
benches/api/src/infrastructure/: cache.rs  external.rs  factory.rs  fail_injection.rs  in_memory.rs  mod.rs  postgres.rs  redis.rs  repository.rs  scenario.rs
benches/api/tests/: cache_integration.rs  demo_endpoints.rs  production_endpoints.rs  search_integration.rs
benches/api/tests/common/: mod.rs
functional-rusty-derive/: Cargo.toml
functional-rusty-derive/src/: lenses.rs  lib.rs  prisms.rs
lambars-derive/: Cargo.toml
lambars-derive/src/: curry.rs  lenses.rs  lib.rs  prisms.rs
samples/bank/: .env.example  Cargo.toml  README.ja.md  README.md
samples/bank/benchmarks/: README.ja.md  README.md  run_benchmark.sh
samples/bank/benchmarks/results/: benchmark_20260117_165357.txt  benchmark_20260117_171511.txt  benchmark_20260117_172141.txt  resources_20260117_165357.csv  resources_20260117_171511.csv  resources_20260117_172141.csv
samples/bank/benchmarks/scripts/: deposit.lua  health.lua  transfer.lua  withdraw.lua
samples/bank/docker/: compose.yaml
samples/bank/docker/app/: Dockerfile
samples/bank/docker/localstack/: init-localstack.sh
samples/bank/docker/postgres/: init.sql
samples/bank/docker/redis/: redis.conf
samples/bank/migrations/: 001_create_events_table.sql
samples/bank/src/: lib.rs  main.rs
samples/bank/src/api/: mod.rs  routes.rs
samples/bank/src/application/: mod.rs
samples/bank/src/domain/: mod.rs
samples/bank/src/infrastructure/: config.rs  dependencies.rs  event_store.rs  messaging.rs  mod.rs  read_model.rs
samples/bank/tests/: integration_tests.rs
samples/bank/tests/api/: account_create_tests.rs  account_get_tests.rs  balance_tests.rs  deposit_tests.rs  health_tests.rs  mod.rs  transactions_tests.rs  transfer_tests.rs  withdraw_tests.rs
samples/bank/tests/common/: assertions.rs  client.rs  docker.rs  fixtures.rs  (+1 more)
samples/order/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
samples/order/docs/: architecture.md  roadmap.yaml  usage.md
samples/order/src/: lib.rs  main.rs
samples/order/tests/: api_dependencies_tests.rs  api_integration_tests.rs  api_place_order_tests.rs  api_types_tests.rs  axum_handler_tests.rs  compound_types_tests.rs  dto_error_tests.rs  dto_input_tests.rs  dto_output_tests.rs  dto_roundtrip_laws.rs  events_tests.rs  integration_tests.rs  monad_laws.rs  phase10_integration_tests.rs  phase11_pipe_macro_tests.rs  phase12_compose_macro_tests.rs  place_order_tests.rs  pricing_catalog_laws.rs  pricing_catalog_tests.rs  pricing_tests.rs  shipping_eff_macro_tests.rs  shipping_tests.rs  simple_types_laws.rs  simple_types_tests.rs  validation_tests.rs  workflow_tests.rs
samples/roguelike/: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml
samples/roguelike/benchmarks/: api_benchmark.js
xtask/: Cargo.toml
xtask/src/: bench_api.rs  main.rs
(+810 files in other folders)
