[package]
name = "lambars"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["lambars contributors"]
description = "A functional programming library for Rust providing type classes, persistent data structures, and effect systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lihs-ie/lambars"
keywords = ["functional", "monad", "functor", "persistent", "immutable"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
lambars-derive = { path = "lambars-derive", optional = true }
tokio = { version = "^1.49", features = ["rt", "rt-multi-thread", "time", "sync", "macros"], optional = true }
futures = { version = "^0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
paste = "1.0"
static_assertions = "1.1"

[dev-dependencies]
rstest = "^0.26"
proptest = "1.5"
lambars-derive = { path = "lambars-derive" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "test-util"] }
criterion = { version = "0.8", features = ["html_reports"] }
iai-callgrind = "0.14"
serde_json = "1.0"
trybuild = "1.0"

[features]
default = ["typeclass", "compose", "control", "persistent", "optics", "derive", "effect", "async"]

full = ["typeclass", "compose", "control", "persistent", "optics", "derive", "effect", "async", "serde"]
typeclass = []
compose = ["typeclass", "dep:lambars-derive"]
control = ["typeclass"]
persistent = ["typeclass", "control"]
optics = ["typeclass", "persistent"]
derive = ["optics", "dep:lambars-derive"]
effect = ["typeclass", "control"]
async = ["effect", "dep:tokio", "dep:futures"]
arc = []
rayon = ["arc", "dep:rayon"]
serde = ["dep:serde"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]

# Allow certain patterns that are common in functional programming
module_name_repetitions = "allow"
must_use_candidate = "allow"

[[bench]]
name = "persistent_vector_bench"
harness = false

[[bench]]
name = "persistent_hashmap_bench"
harness = false

[[bench]]
name = "persistent_treemap_bench"
harness = false

[[bench]]
name = "persistent_list_bench"
harness = false

[[bench]]
name = "control_bench"
harness = false

[[bench]]
name = "effect_bench"
harness = false

[[bench]]
name = "for_macro_bench"
harness = false

[[bench]]
name = "for_async_macro_bench"
harness = false

[[bench]]
name = "algebraic_effect_bench"
harness = false

[[bench]]
name = "serde_bench"
harness = false
required-features = ["serde"]

[[bench]]
name = "transient_bench"
harness = false

[[bench]]
name = "rayon_bench"
harness = false
required-features = ["rayon"]

[[bench]]
name = "freer_bench"
harness = false

[[bench]]
name = "bifunctor_bench"
harness = false

[[bench]]
name = "alternative_bench"
harness = false
required-features = ["typeclass"]

# Iai-Callgrind benchmarks
[[bench]]
name = "persistent_vector_iai"
harness = false
path = "benches/iai/persistent_vector_iai.rs"

[[bench]]
name = "effect_iai"
harness = false
path = "benches/iai/effect_iai.rs"

[[bench]]
name = "scenario_iai"
harness = false
path = "benches/iai/scenario_iai.rs"

[profile.bench]
debug = true  # Required for Iai-Callgrind
