[package]
name = "lambars-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["lambars contributors"]
description = "Derive macros for lambars optics (Lenses and Prisms)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lambars/lambars"
keywords = ["functional", "derive", "lens", "prism", "optics"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
rstest = "0.24"
proptest = "1.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow certain patterns that are common in proc-macro crates
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
