[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
publish = false
description = "Development task runner for lambars"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# xtask needs to use env::set_var which is unsafe in Rust 2024
# This is safe because xtask is single-threaded
[lints.rust]
unsafe_code = "allow"
