[package]
name = "task-management-benchmark-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = "Task management benchmark API demonstrating lambars library"
license = "MIT OR Apache-2.0"

[features]
default = []
demo = []  # Demo endpoints for development/debugging

[dependencies]
lambars = { path = "../../", features = ["full", "arc"] }
lambars-derive = { path = "../../lambars-derive" }

# Web Framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Cache (Redis)
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
siphasher = "1.0"
rand = "0.9"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System calls (for memory profiling)
libc = "0.2"

# Lock-free data structures
arc-swap = "1.7"

# LRU Cache for search result caching
lru = "0.12"

# HTTP client for external data sources
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
rstest = "0.24"
proptest = "1.5"
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "task_management_benchmark_api"
path = "src/lib.rs"

[[bin]]
name = "task-management-benchmark-api"
path = "src/main.rs"

[lints.rust]
# Note: unsafe_code is "deny" instead of "forbid" to allow specific exceptions
# like libc::getrusage for peak RSS measurement. Exceptions must have SAFETY comments.
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Exclude from parent workspace (required for standalone build in CI)
[workspace]

# Release profile with debug symbols for profiling (REQ-PROFILE-JSON-003)
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
# Line tables only (debug = 1) - required for perf/flamegraph symbol resolution
# Note: Does not include inline info or full debug info. Consider debug = 2
# for detailed profiling, but increases binary size (~30-50%) and build time.
debug = 1
