[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/workflow",
    "crates/infrastructure",
    "crates/providers",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["lambars contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lihs-ie/lambars"

[workspace.dependencies]
# Internal crates
roguelike-domain = { path = "crates/domain" }
roguelike-workflow = { path = "crates/workflow" }
roguelike-infrastructure = { path = "crates/infrastructure" }
roguelike-providers = { path = "crates/providers" }
roguelike-api = { path = "crates/api" }

# lambars
lambars = { path = "../..", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.31", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
rstest = "0.26"
proptest = "1.5"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
module_name_repetitions = "allow"
must_use_candidate = "allow"
