[package]
name = "roguelike-domain"
description = "Domain layer for Dungeon of Pure Functions roguelike game"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lambars.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true

[lints]
workspace = true
