[package]
name = "roguelike-infrastructure"
description = "Infrastructure layer for Dungeon of Pure Functions roguelike game"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roguelike-domain.workspace = true
roguelike-workflow.workspace = true
lambars.workspace = true
tokio.workspace = true
futures.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
