[package]
name = "roguelike-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roguelike-domain = { workspace = true }
roguelike-workflow = { workspace = true }
lambars = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
